WINDUP-3602 Run project's tests on JDK 11 and 17 (#1607)
* WINDUP-3602 Run project's tests on JDK 11 and 17

* WINDUP-3602 Added 'java.lang' to surefire on JDK 17

* WINDUP-3602 Fixed 'restore-keys' pattern

* WINDUP-3602 Made project's tests job indipendent

* WINDUP-3602 Overwrite 'surefire-jdk17' pluing on 'tests' module

* WINDUP-3602 Optimized test jobs dependency on 'windup-build'

* WINDUP-3602 Added 'java.util' to surefire on JDK 17

* WINDUP-3602 Added 'java.util.stream' to surefire on JDK 17

* WINDUP-3602 Run dependant projects' tests on JDK 11 and 17

* WINDUP-3602 Added MAVEN_OPTS to 'windup-quickstarts-build' job